# ChessEngine

./: CMakeLists.txt  Readme.md
debug_tools/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  abstract_protocol.cc  abstract_protocol.h  chess_coordinates.h  chess_defines.cc  chess_defines.h  chess_move.h  chess_piece.cc  chess_piece.h  chess_pieces.cc  count_moves.cc  count_moves.h  engine.cc  engine.h  engine_manager.cc  engine_manager.h  fen.cc  fen.h  game.cc  game.h  main.cc  node.cc  node.h  position.cc  position.h  position_table.h  time_control.cc  time_control.h  winboard_protocol.cc  winboard_protocol.h  zobrist_hash.cc  zobrist_hash.h
test/: CMakeLists.txt  CmakeLists.txt  fen_test.cc  hash_count_test.cc  position_test.cc  segment_test.cc  tricky_positions_test.cc
